--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "require": {
-    "illuminate/support": "~6.0"
+    "laravel/framework": "^6.0"
     },
     "require-dev": {
 		"phpunit/phpunit": "6.*"
