--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
             "JCFutch\\UIKit3Presets\\": "src/UIKit3Presets/"
         }
     },
-    "extras": {
+    "extra": {
       "laravel": {
         "providers": [
           "JCFutch\\UIKit3Presets\\UIKit3PresetServiceProvider"
